--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "doannodejs",
+  "name": "nodejs",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,7 +10,6 @@
   "license": "ISC",
   "dependencies": {
     "ejs": "^3.1.9",
-    "express": "^4.18.2",
-    "request": "^2.88.2"
+    "express": "^4.18.2"
   }
 }
